Convert all repository SQL query string from single line string to text blocks for better readability